updated the app's directory and: -deleted the design assets (will add this towards the project's end)

--- a/BuyMeNow/BuyMeNow.csproj
+++ b/BuyMeNow/BuyMeNow.csproj
@@ -60,7 +60,8 @@
 	</ItemGroup>
 
 	<ItemGroup>
-	  <Folder Include="View\" />
+	  <Folder Include="Converters\" />
+	  <Folder Include="Views\" />
 	</ItemGroup>
 
 	<ItemGroup>
