Did some changes on the user account functionalities and others -login and registration -filled the following views with content: about, terms and privacy pages (these two are related to legal issue in a real world scenario)

--- a/BuyMeNow/BuyMeNow.csproj
+++ b/BuyMeNow/BuyMeNow.csproj
@@ -51,6 +51,14 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <None Remove="app.db" />
+	</ItemGroup>
+
+	<ItemGroup>
+	  <EmbeddedResource Include="app.db" />
+	</ItemGroup>
+
+	<ItemGroup>
 		<PackageReference Include="BCrypt.Net-Next" Version="4.0.3" />
 		<PackageReference Include="CommunityToolkit.Mvvm" Version="8.1.0" />
 		<PackageReference Include="Microsoft.Extensions.Logging.Debug" Version="7.0.0" />
